--- a/config/s3dis/s3dis_pointtransformer_repro.yaml
+++ b/config/s3dis/s3dis_pointtransformer_repro.yaml
@@ -1,6 +1,6 @@
 DATA:
   data_name: s3dis
-  data_root: dataset/s3dis/trainval_fullarea
+  data_root: /home/user/Documents/dataset/s3dis/trainval_fullarea
   test_area: 5
   classes: 13
   fea_dim: 6
@@ -13,10 +13,10 @@ TRAIN:
   use_xyz: True
   sync_bn: False
   ignore_label: 255
-  train_gpu: [0, 1, 2, 3]
+  train_gpu: [0]
   workers: 16  # data loader workers
-  batch_size: 16  # batch size for training
-  batch_size_val: 4  # batch size for validation during training, memory and speed tradeoff
+  batch_size: 1 #16  # batch size for training
+  batch_size_val: 1  # batch size for validation during training, memory and speed tradeoff
   base_lr: 0.5
   epochs: 100
   start_epoch: 0
@@ -46,7 +46,7 @@ TEST:
   split: val  # split in [train, val and test]
   test_gpu: [0]
   test_workers: 4
-  batch_size_test: 4
+  batch_size_test: 1
   model_path:
   save_folder:
   names_path: data/s3dis/s3dis_names.txt
