--- a/config/s3dis/s3dis_pointtransformer_repro.yaml
+++ b/config/s3dis/s3dis_pointtransformer_repro.yaml
@@ -1,6 +1,6 @@
 DATA:
   data_name: s3dis
-  data_root: /home/user/Documents/dataset/s3dis/trainval_fullarea
+  data_root: /home/tidop/Documents/dataset/s3dis/trainval_fullarea
   test_area: 5
   classes: 13
   fea_dim: 6
@@ -17,7 +17,7 @@ TRAIN:
   workers: 16  # data loader workers
   batch_size: 1 #16  # batch size for training
   batch_size_val: 1  # batch size for validation during training, memory and speed tradeoff
-  base_lr: 0.5
+  base_lr: 0.000005
   epochs: 100
   start_epoch: 0
   step_epoch: 30
@@ -29,7 +29,7 @@ TRAIN:
   print_freq: 1
   save_freq: 1
   save_path:
-  weight:  # path to initial weight (default: none)
+  weight: /home/tidop/Downloads/pointtransformer.pth    # path to initial weight (default: none)
   resume:  # path to latest checkpoint (default: none)
   evaluate: True  # evaluate on validation set, extra gpu memory needed and small batch_size_val is recommend
   eval_freq: 1
