--- a/config/s3dis/s3dis_pointtransformer_repro.yaml
+++ b/config/s3dis/s3dis_pointtransformer_repro.yaml
@@ -6,7 +6,7 @@ DATA:
   fea_dim: 6
   voxel_size: 0.04
   voxel_max: 80000
-  loop: 30
+  loop: 1
 
 TRAIN:
   arch: pointtransformer_seg_repro
@@ -14,7 +14,7 @@ TRAIN:
   sync_bn: False
   ignore_label: 255
   train_gpu: [0]
-  workers: 16  # data loader workers
+  workers: 4  # data loader workers
   batch_size: 1 #16  # batch size for training
   batch_size_val: 1  # batch size for validation during training, memory and speed tradeoff
   base_lr: 0.000005
@@ -29,7 +29,7 @@ TRAIN:
   print_freq: 1
   save_freq: 1
   save_path:
-  weight: /home/tidop/Downloads/pointtransformer.pth    # path to initial weight (default: none)
+  weight: #/home//Downloads/pointtransformer.pth    # path to initial weight (default: none)
   resume:  # path to latest checkpoint (default: none)
   evaluate: True  # evaluate on validation set, extra gpu memory needed and small batch_size_val is recommend
   eval_freq: 1
